{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 30,
  "lineage": "61997405-76c6-382c-4103-e984caba9334",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-00cce962633e5902e",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:829250931565:subnet/subnet-00cce962633e5902e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.49.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cce962633e5902e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "justin-usw2-49-az3-2c",
              "Owner": "Justin Lee",
              "divvy_last_modified_by": "jlee@confluent.io",
              "expiration": "2025-06-16",
              "owner_email": "jlee@confluent.io",
              "tf_last_modified": "2025-05-16",
              "tf_owner": "Justin Lee",
              "tf_owner_email": "jlee@confluent.io",
              "tf_provenance": "github.com/justinrlee/private-terraform/aws/usw2"
            },
            "vpc_id": "vpc-03016998064d00b78"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-02de7a2742608a426",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:829250931565:subnet/subnet-02de7a2742608a426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.49.14.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02de7a2742608a426",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "justin-usw2-49-az4-2d-private",
              "Owner": "Justin Lee",
              "divvy_last_modified_by": "jlee@confluent.io",
              "expiration": "2025-06-16",
              "owner_email": "jlee@confluent.io",
              "tf_last_modified": "2025-05-16",
              "tf_owner": "Justin Lee",
              "tf_owner_email": "jlee@confluent.io",
              "tf_provenance": "github.com/justinrlee/private-terraform/aws/usw2"
            },
            "vpc_id": "vpc-03016998064d00b78"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0519597a0ec7b9919",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:829250931565:subnet/subnet-0519597a0ec7b9919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.49.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0519597a0ec7b9919",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "justin-usw2-49-az2-2a",
              "Owner": "Justin Lee",
              "divvy_last_modified_by": "jlee@confluent.io",
              "expiration": "2025-06-16",
              "owner_email": "jlee@confluent.io",
              "tf_last_modified": "2025-05-16",
              "tf_owner": "Justin Lee",
              "tf_owner_email": "jlee@confluent.io",
              "tf_provenance": "github.com/justinrlee/private-terraform/aws/usw2"
            },
            "vpc_id": "vpc-03016998064d00b78"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-05b34fabfd3957bd4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:829250931565:subnet/subnet-05b34fabfd3957bd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.49.11.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b34fabfd3957bd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "justin-usw2-49-az1-2b-private",
              "Owner": "Justin Lee",
              "divvy_last_modified_by": "jlee@confluent.io",
              "expiration": "2025-06-16",
              "owner_email": "jlee@confluent.io",
              "tf_last_modified": "2025-05-16",
              "tf_owner": "Justin Lee",
              "tf_owner_email": "jlee@confluent.io",
              "tf_provenance": "github.com/justinrlee/private-terraform/aws/usw2"
            },
            "vpc_id": "vpc-03016998064d00b78"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-086bd29c0a894a925",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:829250931565:subnet/subnet-086bd29c0a894a925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.49.12.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086bd29c0a894a925",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "justin-usw2-49-az2-2a-private",
              "Owner": "Justin Lee",
              "divvy_last_modified_by": "jlee@confluent.io",
              "expiration": "2025-06-16",
              "owner_email": "jlee@confluent.io",
              "tf_last_modified": "2025-05-16",
              "tf_owner": "Justin Lee",
              "tf_owner_email": "jlee@confluent.io",
              "tf_provenance": "github.com/justinrlee/private-terraform/aws/usw2"
            },
            "vpc_id": "vpc-03016998064d00b78"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0d9256fe976ca3b56",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:829250931565:subnet/subnet-0d9256fe976ca3b56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.49.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9256fe976ca3b56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "justin-usw2-49-az1-2b",
              "Owner": "Justin Lee",
              "divvy_last_modified_by": "jlee@confluent.io",
              "expiration": "2025-06-16",
              "owner_email": "jlee@confluent.io",
              "tf_last_modified": "2025-05-16",
              "tf_owner": "Justin Lee",
              "tf_owner_email": "jlee@confluent.io",
              "tf_provenance": "github.com/justinrlee/private-terraform/aws/usw2"
            },
            "vpc_id": "vpc-03016998064d00b78"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0f2cc69f65fd0b5a1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:829250931565:subnet/subnet-0f2cc69f65fd0b5a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.49.13.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2cc69f65fd0b5a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "justin-usw2-49-az3-2c-private",
              "Owner": "Justin Lee",
              "divvy_last_modified_by": "jlee@confluent.io",
              "expiration": "2025-06-16",
              "owner_email": "jlee@confluent.io",
              "tf_last_modified": "2025-05-16",
              "tf_owner": "Justin Lee",
              "tf_owner_email": "jlee@confluent.io",
              "tf_provenance": "github.com/justinrlee/private-terraform/aws/usw2"
            },
            "vpc_id": "vpc-03016998064d00b78"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0f882afa70677b6fc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:829250931565:subnet/subnet-0f882afa70677b6fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.49.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f882afa70677b6fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "justin-usw2-49-az4-2d",
              "Owner": "Justin Lee",
              "divvy_last_modified_by": "jlee@confluent.io",
              "expiration": "2025-06-16",
              "owner_email": "jlee@confluent.io",
              "tf_last_modified": "2025-05-16",
              "tf_owner": "Justin Lee",
              "tf_owner_email": "jlee@confluent.io",
              "tf_provenance": "github.com/justinrlee/private-terraform/aws/usw2"
            },
            "vpc_id": "vpc-03016998064d00b78"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:829250931565:vpc/vpc-03016998064d00b78",
            "cidr_block": "10.49.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09597777274053c6f",
                "cidr_block": "10.49.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4b3aa632",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03016998064d00b78",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d73283abf57598b6",
            "owner_id": "829250931565",
            "tags": {
              "Name": "justin-usw2-49",
              "Owner": "Justin Lee",
              "divvy_last_modified_by": "jlee@confluent.io",
              "expiration": "2025-06-16",
              "owner_email": "jlee@confluent.io",
              "tf_last_modified": "2025-05-16",
              "tf_owner": "Justin Lee",
              "tf_owner_email": "jlee@confluent.io",
              "tf_provenance": "github.com/justinrlee/private-terraform/aws/usw2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:829250931565:security-group/sg-059ec4791ee4b4fe4",
            "description": "Security group for PostgreSQL database",
            "egress": [],
            "id": "sg-059ec4791ee4b4fe4",
            "ingress": [],
            "name": "txp-db-sg-69025db6",
            "name_prefix": "",
            "owner_id": "829250931565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "txp-db-sg"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "txp-db-sg",
              "Owner": "jboyer@confluent.io",
              "Project": "cdc-postgres-cc-flink"
            },
            "timeouts": null,
            "vpc_id": "vpc-03016998064d00b78"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_inbound_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "35.80.209.50/32",
              "35.81.13.52/32",
              "35.83.49.171/32",
              "35.161.10.145/32",
              "35.161.229.13/32",
              "35.163.98.130/32",
              "44.224.191.248/32",
              "44.226.85.132/32",
              "44.232.150.154/32",
              "44.235.136.122/32",
              "44.237.176.196/32",
              "44.238.116.230/32",
              "44.241.29.51/32",
              "44.241.78.207/32",
              "52.26.247.161/32",
              "52.26.252.137/32",
              "52.34.192.104/32",
              "54.69.4.7/32",
              "54.70.129.13/32",
              "54.149.169.14/32",
              "54.184.188.46/32",
              "54.203.66.5/32",
              "54.212.67.95/32",
              "73.189.157.48/32"
            ],
            "description": "Allow PostgreSQL inbound traffic from Confluent Cloud connectors and specified IPs",
            "from_port": 5432,
            "id": "sgrule-1088795771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-059ec4791ee4b4fe4",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.postgres_db_sg",
            "data.aws_vpc.existing",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-226322075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-059ec4791ee4b4fe4",
            "security_group_rule_id": "sgr-0bedb40a651df350f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.postgres_db_sg",
            "data.aws_vpc.existing",
            "random_id.env_display_id"
          ]
        }
      ]
    }
  ]
}